# Sorting-Suite

./: README.md  pyproject.toml
classes/: bubble_sort.py  converter.py  insertion_sort.py  merge_sort.py
spec/: test_bubble_sort.py  test_insertion_sort.py  test_merge_sort.py
