[tool.poetry]
name = "sorting_suite"
version = "0.1.0"
description = ""
authors = ["Kris Litman <kris.d.litman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
